[ACLI] Read password file in as text and trim extra space and newline chars
- Read in as string and trim because some Linux text apps can append a new line char